# Unlimited-Subcategories

category_project/: Dockerfile  cloudformation_template.yaml  docker-compose.yml  pyproject.toml
category_project/categories/: admin.py  models.py  views.py
category_project/category_project/: settings.py  urls.py
