[tool.poetry]
name = "category_project"
version = "0.1.0"
description = ""
authors = ["Nehad-Said <nehadabasit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.7"  
psycopg2-binary = "^2.9"  # For PostgreSQL
gunicorn = "^20.1"  # For production server
django-environ = "^0.11.2"
whitenoise = "^6.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
